force-app/main/default/objects/ServiceLog__c/ServiceLog__c.object-meta.xml
<CustomObject>
    <label>ServiceLog</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>ServiceLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>