force-app/main/default/objects/ServiceLog__c/fields/Actiontxt__c.field-meta.xml
<CustomField>
    <fullName>Actiontxt__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>