force-app/main/default/objects/ServiceLog__c/fields/Actual_Begin_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Begin_DateTime__c</fullName>
    <label>Actual Begin DateTime</label>
    <type>DateTime</type>
</CustomField>