force-app/main/default/objects/ServiceLog__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Service Case is closed.</errorMessage>
        <filterItems>
            <field>Contact.Service_Case__r.Status__c</field>
            <operation>notEqual</operation>
            <value>Close</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ServiceLogs</relationshipLabel>
    <relationshipName>ServiceLogs</relationshipName>
    <type>Lookup</type>
</CustomField>