force-app/main/default/objects/ServiceLog__c/fields/Court_Order__c.field-meta.xml
<CustomField>
    <fullName>Court_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Order</label>
    <type>Checkbox</type>
</CustomField>