force-app/main/default/objects/ServiceLog__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 hour per visit</fullName>
            </value>
            <value>
                <fullName>2 hour per visit</fullName>
            </value>
            <value>
                <fullName>3 hour per visit</fullName>
            </value>
            <value>
                <fullName>4 hour per visit</fullName>
            </value>
            <value>
                <fullName>5 hour per visit</fullName>
            </value>
            <value>
                <fullName>6 hour per visit</fullName>
            </value>
            <value>
                <fullName>7 hour per visit</fullName>
            </value>
            <value>
                <fullName>8 hour per visit</fullName>
            </value>
            <value>
                <fullName>9 hour per visit</fullName>
            </value>
            <value>
                <fullName>10 hour per visit</fullName>
            </value>
            <value>
                <fullName>11 hour per visit</fullName>
            </value>
            <value>
                <fullName>12 hour per visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>