force-app/main/default/objects/ServiceLog__c/fields/Estimated_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Begin_Date__c</fullName>
    <label>Estimated Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>