force-app/main/default/objects/ServiceLog__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>As Necessary</fullName>
            </value>
            <value>
                <fullName>Bi-annually</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every other day</fullName>
            </value>
            <value>
                <fullName>Every other month</fullName>
            </value>
            <value>
                <fullName>Every other week</fullName>
            </value>
            <value>
                <fullName>Five times weekly</fullName>
            </value>
            <value>
                <fullName>Four times weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One time occurence</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Three times monthly</fullName>
            </value>
            <value>
                <fullName>Three times weekly</fullName>
            </value>
            <value>
                <fullName>Twice monthly</fullName>
            </value>
            <value>
                <fullName>Twice weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>