force-app/main/default/objects/ServiceLog__c/fields/Reason_Service_Not_Received__c.field-meta.xml
<CustomField>
    <fullName>Reason_Service_Not_Received__c</fullName>
    <label>Reason Service Not Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>