force-app/main/default/objects/ServiceLog__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Attorney Fees (Paid)</fullName>
            </value>
            <value>
                <fullName>Adult Literacy Services (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Adult Literacy Services (Paid)</fullName>
            </value>
            <value>
                <fullName>Alcohol Assessment (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Alcohol Assessment (Paid)</fullName>
            </value>
            <value>
                <fullName>Alcohol Assessment-EBP (Paid)</fullName>
            </value>
            <value>
                <fullName>Alcohol Assessment-EBP-Medicaid (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Alcohol Assessment-EBP-Other Fund (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Alcohol Assessment-EBP-Private Ins (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Assessment Services (Paid)</fullName>
            </value>
            <value>
                <fullName>Birth Certificate (Paid)</fullName>
            </value>
            <value>
                <fullName>Budget and Financial Management- ETV (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Budget and Financial Management- General (Paid)</fullName>
            </value>
            <value>
                <fullName>Budget and Financial Management-Gen (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Burial Assistance (Paid)</fullName>
            </value>
            <value>
                <fullName>CBT/CBT+ (Cognitive Behavior Therapy)-EBP (Paid)</fullName>
            </value>
            <value>
                <fullName>Camping (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Camping (Paid)</fullName>
            </value>
            <value>
                <fullName>Camping-EBP (Paid)</fullName>
            </value>
            <value>
                <fullName>Camping-EBP-Medicaid (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Camping-EBP-Other Fund (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Camping-EBP-Private Ins (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Career Prep Employment Prg-Gen (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Career Prep Employment Prg-Gen (Paid)</fullName>
            </value>
            <value>
                <fullName>Career Preparation Empl Prg- ETV (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Child Care (Non-Paid)</fullName>
            </value>
            <value>
                <fullName>Child Care (Paid)</fullName>
            </value>
            <value>
                <fullName>Child Care- Formal (Paid)</fullName>
            </value>
            <value>
                <fullName>Child Care- Informal (Paid)</fullName>
            </value>
            <value>
                <fullName>Child Development (Non-Paid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>