force-app/main/default/objects/ServiceLog__c/fields/Service_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Reason__c</fullName>
    <label>Service End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>