force-app/main/default/objects/ServiceLog__c/fields/Service_Not_Received__c.field-meta.xml
<CustomField>
    <fullName>Service_Not_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Not Received</label>
    <type>Checkbox</type>
</CustomField>