force-app/main/default/objects/ServiceLog__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <label>Service Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>